--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "rm -f local.db* && npm run db:push && next dev --turbopack -p 9002",
+    "dev": "npm run db:push && next dev --turbopack -p 9002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "lucide-react": "^0.475.0",
+    "mysql2": "^3.10.2",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
