--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.11.0",
     "@hookform/resolvers": "^4.1.3",
     "@libsql/client": "^0.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
